# xar

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: xar_vs_vec.rs
examples/: basic.rs
src/: lib.rs
tests/: xar.rs
